CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(null0)
SET(CMAKE_C_STANDARD 17)
INCLUDE(FetchContent)

# WARNING: comment these for normal libretro core. They are bad if you don't want games to do terrible things.

# this will allow the rom to hit network resources
ADD_DEFINITIONS(-DNULL0_HTTP)

# allow main.wasm to write to itself (in overlay FS, not the zip) for self-updating
# ADD_DEFINITIONS(-DNULL0_SELFWRITE)

# Add rimage for raylib-like image APIs
FETCHCONTENT_DECLARE(rimage GIT_REPOSITORY https://github.com/RobLoach/rimage.git GIT_TAG master)
FETCHCONTENT_MAKEAVAILABLE(rimage)

# add libretro
FETCHCONTENT_DECLARE(libretro GIT_REPOSITORY https://github.com/libretro/libretro-common.git GIT_TAG master)
FETCHCONTENT_MAKEAVAILABLE(libretro)

# Add wasm3 for wasm loading
FETCHCONTENT_DECLARE(m3 GIT_REPOSITORY https://github.com/wasm3/wasm3.git GIT_TAG main)
FETCHCONTENT_MAKEAVAILABLE(m3)

# Add PhysFS for filesystm/zip abstraction
SET(PHYSFS_ARCHIVE_ZIP ON CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_7Z OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_GRP OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_WAD OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_HOG OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_MVL OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_QPAK OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_SLB OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_ISO9660 OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_VDF OFF CACHE BOOL "" FORCE)
SET(PHYSFS_BUILD_STATIC ON CACHE BOOL "" FORCE)
SET(PHYSFS_BUILD_SHARED OFF CACHE BOOL "" FORCE)
SET(PHYSFS_BUILD_TEST OFF CACHE BOOL "" FORCE)
SET(PHYSFS_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(PHYSFS_DISABLE_INSTALL OFF CACHE BOOL "" FORCE)
FETCHCONTENT_DECLARE(physfs GIT_REPOSITORY https://github.com/icculus/physfs.git GIT_TAG main)
FETCHCONTENT_MAKEAVAILABLE(physfs)
INCLUDE_DIRECTORIES(${physfs_SOURCE_DIR}/src)

# Add system's copy of curl
FIND_PACKAGE(CURL REQUIRED)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})

FILE(GLOB_RECURSE SOURCE_FILES_LIBRETRO CONFIGURE_DEPENDS src/*.c)

ADD_LIBRARY(${PROJECT_NAME}-libretro SHARED ${SOURCE_FILES_LIBRETRO})
SET_TARGET_PROPERTIES(${PROJECT_NAME}-libretro PROPERTIES PREFIX "")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}-libretro PUBLIC ${libretro_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-libretro PRIVATE m3 rimage physfs-static CURL::libcurl)

