CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(null0)
SET(CMAKE_C_STANDARD 99)

# dependencies
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/tools/cmake")
FIND_PACKAGE(libretro REQUIRED)
FIND_PACKAGE(pntr REQUIRED)
FIND_PACKAGE(m3 REQUIRED)
FIND_PACKAGE(physfs REQUIRED)

# target: libretro
FILE(GLOB_RECURSE SOURCE_FILES_LIBRETRO CONFIGURE_DEPENDS src/null0_libretro.c)
ADD_LIBRARY(${PROJECT_NAME}-libretro SHARED ${SOURCE_FILES_LIBRETRO})
SET_TARGET_PROPERTIES(${PROJECT_NAME}-libretro PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-libretro PRIVATE pntr m3 physfs-static)
